updated current to recent

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ img, svg, video { max-width: 100%; height: auto; display: block; }
 }
 
 /* Mobile/tablet: let it flow with the page */
-@media (max-width: 1023px) {
+@media (max-width: 480px) {
   .sidebar {
     position: relative;   /* or `relative` */
     top: auto;
@@ -203,7 +203,7 @@ img, svg, video { max-width: 100%; height: auto; display: block; }
       <p class="roles">Professor, Department of Computer Science · Ashoka University</p>
       <div class="tags" aria-label="Research areas">
         <span class="tag"><a href="#About">About</a></span>
-        <span class="tag"><a href="#research">Recent research</a></span>
+        <span class="tag"><a href="#research">Research</a></span>
         <span class="tag"><a href="#courses">Courses</a></span>
         <span class="tag"><a href="#opeds">Commentaries</a></span>
       </div>
@@ -254,7 +254,7 @@ img, svg, video { max-width: 100%; height: auto; display: block; }
         <section class="section" aria-labelledby="research">
           <a name="research"><h2 id="research">Recent research</h2></a>
 																		<div class="tab-pane fade "
-										id="CurrentResearch"
+										id="recentResearch"
 										role="tabpanel" aria-labelledby="v-pills-settings-tab">
 										<div class="">
 											<div class="sort_card_info">
