--- a/index.html
+++ b/index.html
@@ -225,9 +225,7 @@ img, svg, video { max-width: 100%; height: auto; display: block; }
         </dl>
         <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:8px">
           <a class="button primary" href="https://www.ashoka.edu.in/profile/subhashis-banerjee/" target="_blank" rel="noopener">Ashoka Profile</a>
-<!---
-          <a class="button" href="mailto:suban@ashoka.edu.in">Email</a>
---->
+          <a class="button" target="_blank" href=cv.pdf>Biodata</a>
         </div>
         <hr style="border:none;border-top:1px solid var(--hair);margin:16px 0" />
         <div>
