fixed for mobile

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             font: 16px/1.6 var(--font-stack);
             text-rendering: optimizeLegibility;
             -webkit-font-smoothing: antialiased;
+            overflow-x: hidden; /* Added to fix the mobile overflow issue */
         }
         h1, h2, h3, h4 {
             color: var(--heading);
