--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             border-radius: var(--radius);
             box-shadow: var(--shadow);
             padding: 1.5rem;
+	    overflow-x: hidden; /* Prevent horizontal spillover within any card */
         }
         .hero { /* Header block */
             padding: 2rem 1.5rem;
