--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             object-fit: cover;
             display: block;
             margin: 0 auto 1.5rem;
+	    overflow-x: hidden;
         }
 
         /* === 5. CONTENT COMPONENTS === */
