updated notes notification

--- a/Courses/QRMT_Monsoon2025/index.html
+++ b/Courses/QRMT_Monsoon2025/index.html
@@ -91,7 +91,7 @@
         </li>
         <li>
           <h3>The prime thing</h3>
-          <p>Primes, GCD and LCM, there are infinitely many primes, the fundamental theorem of arithmetic. Primes and the intrigue of crypto. <span class="hours"></span></p>
+          <p>Primes, GCD and LCM, there are infinitely many primes, the fundamental theorem of arithmetic. Primes and the intrigue of crypto. <span class="hours" (<u>Lecture notes updated on October 15</u>)></span></p>
         </li>
         <li>
           <h3>Counting can be tricky</h3>
