updated notes, webpage

--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
                         <li>Numerical Algorithms</li>
                         <li>Design Practices in CS</li>
                         <li>Operating Systems</li>
+                        <li>Information Security</li>
                         <li>Design and Analysis of Algorithms</li>
                         <li>Theory of Computation</li>
                         <li>Mathematical Foundations of Computer Science</li>
@@ -365,6 +366,7 @@
                         <li>Simultaneous Localization and Mapping</li>
                         <li>Identity, Data and Privacy</li>
                         <li>Fairness and Reliability of Machine Learning</li>
+                        <li>Trustworthy AI</li>
                     </ul>
                 </section>
 
