--- a/Courses/QRMT_Monsoon2025/index.html
+++ b/Courses/QRMT_Monsoon2025/index.html
@@ -48,7 +48,7 @@
         <span class="tag"><a href="#honourcode">Honour code</a></span>
         <span class="tag"><a href="#attendance">Attendance requirement</a></span>
         <span class="tag"><a href="#evals">Evaluations</a></span>
-        <span class="tag"><a href=QRMT.pdf target="_blank">Lecture notes (PDF)</a></span>
+        <span class="tag"><a href=QRMT.pdf target="_blank">Lecture notes (PDF; last updated on November 10)</a></span>
       </div>
     </header>
 
@@ -71,15 +71,15 @@
       <ol>
         <li>
           <h3>God gave us numbers, and human thought created algorithms</h3>
-          <p>Sets, sizes and natural numbers. Early math is constructive and algorithmic: addition, subtraction, multiplication (repeated addition), the division theorem and fractions. Illustration of the basic algorithms in different models &mdash; ruler and compass, abacus, marbles, pencil and paper. <span class="noted">(<u>Lecture notes updated on September 6</u>)</span></p>
+          <p>Sets, sizes and natural numbers. Early math is constructive and algorithmic: addition, subtraction, multiplication (repeated addition), the division theorem and fractions. Illustration of the basic algorithms in different models &mdash; ruler and compass, abacus, marbles, pencil and paper. <span class="noted"></span></p>
         </li>
         <li>
           <h3>Abstraction turns problems and concepts into principles</h3>
-          <p>Functions and relations, counting, one‑one and onto functions, finite and countably infinite sets, equivalence classes and partitions. Modular arithmetic: the clock, the magic square, one‑time pad and perfect secrecy, etc. <span class="noted">(<u>Lecture notes updated on September 6</u>)</span></p>
+          <p>Functions and relations, counting, one‑one and onto functions, finite and countably infinite sets, equivalence classes and partitions. Modular arithmetic: the clock, the magic square, one‑time pad and perfect secrecy, etc. <span class="noted"></span></p>
         </li>
         <li>
           <h3>We need precision in thought and action to win arguments</h3>
-          <p>Basic logic, truth tables, De Morgan’s laws, truth table of implication. Proofs: explicit construction, counter‑example, exhaustion of cases, contradiction, contrapositive.  <span class="noted">(<u>Lecture notes updated on September 21</u>)</span></p>
+          <p>Basic logic, truth tables, De Morgan’s laws, truth table of implication. Proofs: explicit construction, counter‑example, exhaustion of cases, contradiction, contrapositive.  <span class="noted"></span></p>
         </li>
         <li>
           <h3>Different types of geometry</h3>
@@ -91,7 +91,7 @@
         </li>
         <li>
           <h3>The prime thing</h3>
-          <p>Primes, GCD and LCM, there are infinitely many primes, the fundamental theorem of arithmetic. Primes and the intrigue of crypto. <span class="noted"> (<u>Lecture notes updated on October 26</u>)</span></p>
+          <p>Primes, GCD and LCM, there are infinitely many primes, the fundamental theorem of arithmetic. Primes and the intrigue of crypto. <span class="noted"> </span></p>
         </li>
         <li>
           <h3>Counting can be tricky</h3>
