updated with QCQI

--- a/index.html
+++ b/index.html
@@ -338,20 +338,20 @@
                     
                     <h3>Current Course(s)</h3>
                     <ul class="list-unstyled">
-                        <li>Quantitative Reasoning and Mathematical Thinking (QRMT) <a class="pill" href="Courses/QRMT_Monsoon2025/" target="_blank" aria-label="QRMT Course page">Course page</a></li>
-                        <li>Information Security <a class="pill" href="Courses/InfoSec_Monsoon2025/" target="_blank" aria-label="InfoSec Course page">Course page</a></li>
+                        <li>Quantum computation and quantum information (QCQI) <a class="pill" href="Courses/QCQI_Spring2026/" target="_blank" aria-label="QCQI Course page">Course page</a></li>
+                        <li>Information Security <a class="pill" href="Courses/InfoSec_Spring2026/" target="_blank" aria-label="InfoSec Course page">Course page</a></li><
                     </ul>
                     
                     <h3>Courses Taught</h3>
                     <ul style="column-count: 2; column-gap: 20px;">
                         <li>Introduction to Computer Science</li>
-                        <li>Quantitative Reasoning and Mathematical Thinking</li>
+                        <li>Quantitative Reasoning and Mathematical Thinking <a class="pill" href="Courses/QRMT_Monsoon2025/" target="_blank" aria-label="QRMT Course page">Monsoon '25</a></li>
                         <li>Discrete Structures</li>
                         <li>Data Structures</li>
                         <li>Numerical Algorithms</li>
                         <li>Design Practices in CS</li>
                         <li>Operating Systems</li>
-                        <li>Information Security</li>
+                        <li>Information Security <a class="pill" href="Courses/InfoSec_Monsoon2025/" target="_blank" aria-label="InfoSec Course page">Monsoon '25</a></li>
                         <li>Design and Analysis of Algorithms</li>
                         <li>Theory of Computation</li>
                         <li>Mathematical Foundations of Computer Science</li>
