--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     <h3>Current Course(s)</h3>
                     <ul class="list-unstyled">
                         <li>Quantum computation and quantum information (QCQI) <a class="pill" href="Courses/QCQI_Spring2026/" target="_blank" aria-label="QCQI Course page">Course page</a></li>
-                        <li>Information Security <a class="pill" href="Courses/InfoSec_Spring2026/" target="_blank" aria-label="InfoSec Course page">Course page</a></li><
+                        <li>Information Security <a class="pill" href="Courses/InfoSec_Spring2026/" target="_blank" aria-label="InfoSec Course page">Course page</a></li>
                     </ul>
                     
                     <h3>Courses Taught</h3>
