--- a/Courses/InfoSec_Spring2026/index.html
+++ b/Courses/InfoSec_Spring2026/index.html
@@ -67,6 +67,7 @@
       <ul>
         <li>Introduction to security, trust vs verifiability (<a href=Lecture-1.pdf>Lecture-1.pdf</a>, <a href=Lecture-2.pdf>Lecture-2.pdf</a>) </li>
         <li>Verification of security protocols, Dolev-Yao model (<a href=Lecture-3.pdf>Lecture-3.pdf</a>) </li>
+        <li>Man-in-the-middle and replay attacks (<a href=Lecture-3.pdf>Lecture-4.pdf</a>) </li>
 <!---
         <li>Adversarial threat models</li>
         <li>Notions of secrecy, privacy, and security</li>
@@ -115,8 +116,8 @@
     <section>
       <a name="evals"><h2>Evaluations</h2></a>
       <ul>
-        <li>Quizzes: 20%
-        <li>Assignments and project: 30%
+        <li>Quizzes: 30%
+        <li>Assignments: 20%
         <li>Midterm examination: 25%
         <li>Final examination: 25%
       </ul>
